프론트 수정.

--- a/src/main/resources/templates/mypage/changePw.html
+++ b/src/main/resources/templates/mypage/changePw.html
@@ -4,6 +4,7 @@
 
 <!-- 코드언어 표시 == 웹 표준지침 준수 -->
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Bootstrap icons-->
@@ -19,7 +20,6 @@
     <link href="../../assets/css/style.css?after" rel="stylesheet"/>
     <link href="../../assets/css/commonstyle.css?after" rel="stylesheet"/>
     <title>비밀번호 변경</title>
-    <link rel="icon" href="image/wave.ico">
 
 </head>
 <style>
