--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -64,7 +64,7 @@
 
     /*    업로드 버튼*/
     .btn-upload {
-        width: 150px;
+        width: 120px;
         height: 30px;
         background: #fff;
         border: 1px solid rgb(77, 77, 77);
@@ -163,8 +163,8 @@
 
                 <form id="editForm" action="/editProfile" method="post">
                     <div class="form-group userInput ">
-                        <div class="mb-5">
-                            <div class="mb-2">
+                        <div class="mb-3">
+                            <div class="mb-4">
                                 <div class="about-list">
                                 <h4 class="list ">닉네임</h4>
                                 <div class="list_info">※ 10자까지입력가능
@@ -186,12 +186,19 @@
                             </div>
                         </div>
 
-                        <div class="btn-editProfile">
-                            <button class="text-center btn btn-primary2" id="saveCancel">취소</button>
-                            <button class="text-center btn btn-primary btn-md" id="saveProfileBtn" type="button"
-                                    onclick="saveProfile()">저장
-                            </button>
-                        </div>
+
+<!--                        <div class="btn-editProfile">-->
+<!--                            <button class="text-center btn btn-primary2" id="saveCancel"  onclick="location.href='/mypage.html';">취소</button>-->
+
+                    </div>
+                    <div class="btn_align">
+
+                        <button class="col text-center btn btn-primary2" id="saveCancel" onclick="cancel()">취소
+                        </button>
+
+                        <button class="text-center btn btn-primary btn-md" id="saveProfileBtn" type="button"
+                                onclick="saveProfile()">저장
+                        </button>
                     </div>
                 </form>
             </div>
@@ -245,6 +252,10 @@
                 console.error(err); // 오류 메시지 출력
             }
         })
+    }
+
+    function cancel() {
+        window.location.href = '/review';
     }
 </script>
 </body>
