--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -106,7 +106,7 @@
             </div>
 
 
-            <div class="login-form w3-content w3-container w3-margin-top container-fluid position-relative pb-5">
+            <div class="login-form w3-content w3-container w3-margin-top container-fluid position-relative mb-4">
 
                 <h1 class="text-center">로그인</h1>
                 <div id="header">
@@ -115,13 +115,13 @@
 
 
                 <!--아이디-->
-                <div class="userInput mb-5">
+                <div class="userInput mb-4">
                     <h4 class="list">아이디</h4>
                     <input type="text" name="id" class="form-control form-control-sm" maxlength="20"
                            placeholder="아이디를 입력하세요."><br/>
                 </div>
                 <!--비밀번호-->
-                <div class="userInput mb-5">
+                <div class="userInput mb-4">
                     <h4 class="list">비밀번호</h4>
                     <input type="password" name="pw" class="form-control form-control-sm" maxlength="20"
                            placeholder="비밀번호를 입력하세요."><br/>
